# gift_it_all

./: .gitignore  README.md  manage.py  pyproject.toml  render.yaml  requirements.txt
accounts/: backends.py  managers.py  models.py
accounts/migrations/: 0001_initial.py
basket/: __init__.py  admin.py  apps.py  models.py
catalogue/: apps.py  mixin.py  models.py  views.py
catalogue/api/v1/: serializers.py  urls.py  views.py
catalogue/migrations/: 0027_auto_20231114_2319.py
checkout/: __init__.py  apps.py  repository.py
custom_users/: models.py  serializers.py  views.py
dashboard/: __init__.py  apps.py  forms.py
dashboard/catalogue/: apps.py  views.py
gift_it_all/: settings.py  urls.py  utils.py  wsgi.py
order/: __init__.py  apps.py  models.py
static/css/: responsive.css  style.min.css
static/scss/: _variabls.scss
static/scss/header/: _lan-curr.scss  _menu.scss
static/scss/pages/shop/: _toolbar.scss
templates/components/: base.html  footer.html  frame.html  header.html
templates/partials/: basket_quick.html  form.html  messages.html
templates/website/: cart.html  checkout.html  contact_us.html  homepage.html  login.html  product_detail.html  product_list.html
website/: urls.py  views.py
website/api/: urls.py  views.py
