[tool.poetry]
name = "gift_it_all"
version = "0.1.0"
description = ""
authors = ["anavya <anavya.in@gmail.com>"]
readme = "README.md"
packages = [{include = "gift_it_all"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
